# lcmaps-plugins-pilot-sub-proxy

./: AUTHORS  Makefile.am  NEWS  README.md  bootstrap  configure.ac
doc/: Makefile.am  lcmaps-example.db.src
doc/man/: create_pilot_sub_proxy.sh.1.in  create_pilot_subproxy.sh.1.in  lcmaps_pilot_sub_proxy.mod.8.in
project/: lcmaps.m4
spec/: lcmaps-plugins-pilot-sub-proxy.spec
src/: Makefile.am  lcmaps_pilot_sub_proxy.c  lcmaps_pilot_sub_proxy_utils.c  lcmaps_pilot_sub_proxy_utils.h  lcmaps_plugin_prototypes.h
tools/: create_pilot_sub_proxy.sh  create_pilot_subproxy.sh
